--- a/WebAppRazorPages/wwwroot/css/scss/_sections.scss
+++ b/WebAppRazorPages/wwwroot/css/scss/_sections.scss
@@ -1,4 +1,5 @@
 @import './sections/_header.scss';
+@import './sections/_signup.scss';
 @import './sections/_showcase.scss';
 @import './sections/_features.scss';
 @import './sections/_switch.scss';
